fixed codacy error

--- a/signup/signup-buyer.html
+++ b/signup/signup-buyer.html
@@ -6,7 +6,7 @@
     <title>Signup Seller</title>
     <!--css-->
     <link rel="stylesheet" href="../css/main.css" type="text/css">
-    <link rel="stylesheet" href="../css/signuppages.css"" type="text/css">
+    <link rel="stylesheet" href="../css/signuppage.css"" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
